--- a/views/index.html
+++ b/views/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <script src="../js/medida.js"></script>
+
+    <script>
+        p = new Medida("2F")
+    </script>
+
 </head>
 <body>
-$END$
+<h1>Temperature Converter</h1>
+<table>
+    <tr>
+        <th>Enter Temperature (examples: 32F, 45C, -2.5f):</th>
+        <td><input id="original" autofocus onchange="p.calculate();" placeholder="32F" size="50"></td>
+
+        <th>Converted Temperature:</th>
+        <td><span class="output" id="converted"></span></td>
+    </tr>
+</table>
 </body>
 </html>
